--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,16 @@
 <html>
   <head>
     <title>Meadowlark Travel</title>
+		<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="/css/style.css">
 		{{#if showTests}}
 			<link rel="stylesheet" href="/vendor/mocha.css">
 		{{/if}}
 		<script src="//code.jquery.com/jquery-2.0.2.min.js"></script>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+        <script src="/vendor/jqfu/jquery.ui.widget.js"></script>
+        <script src="/vendor/jqfu/jquery.iframe-transport.js"></script>
+        <script src="/vendor/jqfu/jquery.fileupload.js"></script>
   </head>
   <body>
     <header><img src="/img/logo.jpg" alt="meadowlark logo" width="50"></header>
